[tool.poetry]
name = "ws"
version = "0.1.0"
description = ""
authors = ["Safarveisi <sajad.safarveisi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
webdriver-manager = "^4.0.1"
selenium = "^4.21.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
seaborn = "^0.13.2"
pandarallel = "^1.6.5"
ipywidgets = "^8.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
